--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,17 @@
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <EditText android:id="@+id/amount_to_split"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/total_to_split"/>
+    <EditText android:id="@+id/n_shares"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/n_shares"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/split_now" />
 
 </RelativeLayout>
