--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -9,4 +9,14 @@
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="evenSplit"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="checkOut"/>
+
 </RelativeLayout>
