--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -6,17 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.traviswu.payme.ContinueToSplit">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:id="@+id/split_instruction"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="evenSplit"/>
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="checkOut"/>
+        android:text="@string/even_split"
+        android:onClick="evenSplit"
+        android:id="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/proceed_to_checkout"
+        android:onClick="checkOut"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button" />
 
 </RelativeLayout>
