--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -6,25 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.traviswu.payme.ContinueToSplit">
 
-    <TextView android:id="@+id/split_instruction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/even_split"
         android:onClick="evenSplit"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/proceed_to_checkout"
         android:onClick="checkOut"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="79dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
