--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -13,8 +13,9 @@
         android:text="@string/even_split"
         android:onClick="evenSplit"
         android:id="@+id/button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/button2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
         android:layout_marginBottom="79dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/button2" />
 
 </RelativeLayout>
