--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C9F1FD"
-    android:id="@+id/still">
+    android:id="@+id/still"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="314dp"
@@ -22,7 +23,7 @@
         android:layout_gravity="center"
 
         android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/mybuttonshape" />
 
     <Button
