--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -6,6 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.traviswu.payme.ContinueToSplit">
 
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/sharkvert" />
 
     <Button
         android:layout_width="match_parent"
