--- a/app/src/main/res/layout/activity_continue_to_split.xml
+++ b/app/src/main/res/layout/activity_continue_to_split.xml
@@ -9,7 +9,10 @@
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/sharkvert" />
+    android:src="@drawable/sharkvert"
+    android:id="@+id/imageView4"
+    android:scaleType="fitCenter"
+    android:layout_alignParentTop="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -27,10 +30,19 @@
         android:text="@string/proceed_to_checkout"
         android:onClick="checkOut"
         android:layout_gravity="center"
-        android:layout_marginBottom="79dp"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/imageView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <ImageView
+        android:layout_width="100"
+        android:layout_height="30dp"
+        android:src="@drawable/bid"
+        android:layout_below="@+id/imageView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/button2" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
