--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,7 +13,9 @@
     android:src="@drawable/sharkvert"
     android:id="@+id/imageView4"
     android:scaleType="fitCenter"
-    android:layout_alignParentTop="true" />
+    android:layout_above="@+id/buttonBlood"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true" />
     <!--<Button-->
         <!--android:id="@+id/angry_btn"-->
 
@@ -47,10 +49,9 @@
         android:id="@+id/sharkSplit"
 
         android:background="@drawable/mybuttonshape"
-        android:layout_above="@+id/buttonBlood"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="56dp" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -61,19 +62,17 @@
         android:id="@+id/buttonBlood"
 
         android:background="@drawable/mybuttonshape"
-        android:layout_marginBottom="63dp"
-        android:layout_above="@+id/imageView5"
+        android:layout_below="@+id/sharkSplit"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="43dp" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bid"
-        android:layout_below="@+id/imageView4"
+        android:id="@+id/imageView5"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/imageView5" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
