Implemented fragments to make the swipe screen feature work. Added new classes namely: FragmentOne, PagerAdapter, SharkTank, Added new xml layouts as well. Made changes to the MainActivity to make it compatible with the fragment architecture. Also, connected the Shark Split button back to the SharkSplit class.

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -47,7 +47,7 @@
         android:textColor="#030505"
         android:textSize="30sp"
         android:id="@+id/sharkSplit"
-
+        android:onClick="onClick"
         android:background="@drawable/mybuttonshape"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
