Changed the way of doing contacts. Pull all from the list and ask user to select. Have some problems, including trying to add null pointer at line 163 in SharkSplit. Biggest problem would be not able to access a text dynamically.
- June 15: fixed Contact list. Will be working on displaying this list as a fragment.
- June 16: erased Fragment off my mind, changes to a popup window

--- a/app/src/main/res/layout/shark_split.xml
+++ b/app/src/main/res/layout/shark_split.xml
@@ -28,10 +28,8 @@
 
     <TableLayout
         android:id="@+id/people_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-    </TableLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></TableLayout>
     <Button
         android:id="@+id/launch_contacts"
         android:layout_width="wrap_content"
