--- a/app/src/main/res/layout/shark_split.xml
+++ b/app/src/main/res/layout/shark_split.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/shark_split_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -26,10 +27,7 @@
     <!--android:hint="@string/n_people"-->
     <!--android:inputType="numberSigned" />-->
 
-    <TableLayout
-        android:id="@+id/people_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></TableLayout>
+
     <Button
         android:id="@+id/launch_contacts"
         android:layout_width="wrap_content"
