--- a/app/src/main/res/layout/shark_split.xml
+++ b/app/src/main/res/layout/shark_split.xml
@@ -17,16 +17,12 @@
         android:hint="@string/total_to_split"
         android:inputType="numberSigned" />
 
-    <!--<EditText android:id="@+id/n_people"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_below="@+id/amount_to_split"-->
-    <!--android:layout_marginTop="33dp"-->
-    <!--android:hint="@string/n_people"-->
-    <!--android:inputType="numberSigned" />-->
-
+    <TableLayout
+        android:id="@+id/people_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/amount_to_split"
+        android:layout_centerHorizontal="true"></TableLayout>
 
     <Button
         android:id="@+id/launch_contacts"
@@ -41,6 +37,7 @@
         android:text="@string/launch_contacts" />
 
     <Button
+        android:id="@+id/split_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
