--- a/app/src/main/res/layout/activity_launch_contact.xml
+++ b/app/src/main/res/layout/activity_launch_contact.xml
@@ -21,7 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:onClick="launchContactPicker"
-        android:text="@string/launch_contacts" />
+        android:onClick="launchContactPicker" />
 
 </RelativeLayout>
