--- a/app/src/main/res/layout/shark_split.xml
+++ b/app/src/main/res/layout/shark_split.xml
@@ -7,34 +7,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText android:id="@+id/amount_to_split"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="29dp"
-        android:hint="@string/total_to_split"
-        android:inputType="numberSigned" />
-
     <TableLayout
         android:id="@+id/people_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/amount_to_split"
-        android:layout_centerHorizontal="true"></TableLayout>
+        android:layout_centerHorizontal="true"
+        android:gravity="top">
 
-    <Button
-        android:id="@+id/launch_contacts"
+        <TableRow>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/contact_name" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/contact_phone" />
+
+            <Button
+                android:id="@+id/add_contact"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/contact_add"></Button>
+        </TableRow>
+    </TableLayout>
+
+    <EditText android:id="@+id/amount_to_split"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/split_button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:onClick="launchContactPicker"
-        android:text="@string/launch_contacts" />
+        android:hint="@string/total_to_split"
+        android:inputType="numberSigned" />
 
     <Button
         android:id="@+id/split_button"
@@ -43,8 +50,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:layout_marginBottom="155dp"
+        android:layout_gravity="bottom"
         android:onClick="continueToSplit"
         android:text="@string/split_now" />
 
